fix: scrollbar style in chrome

--- a/src/index.css
+++ b/src/index.css
@@ -10,31 +10,23 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-/* 針對 Chrome 和 Safari */
 ::-webkit-scrollbar {
-  width: 12px; /* 垂直滾動條寬度 */
+  width: 10px; /* 垂直滾動條寬度 */
   height: 12px; /* 水平滾動條高度 */
 }
 
-/* 滾動條的圓角 */
 ::-webkit-scrollbar-thumb {
-  background-color: #888; /* 滾動條顏色 */
-  border-radius: 10px; /* 圓角 */
+  background-color: #bdbdbd;
+  border-radius: 4px;
 }
 
 /* 滾動條的背景 */
 ::-webkit-scrollbar-track {
-  background-color: #f1f1f1;
-  border-radius: 10px; /* 圓角 */
+  background-color: transparent;
+  border-radius: 4px;
 }
 
 /* 隱藏上下的箭頭 */
 ::-webkit-scrollbar-button {
   display: none;
-}
-
-/* 針對 Firefox */
-html {
-  scrollbar-width: thin;
-  scrollbar-color: #888 #f1f1f1;
 }
